Fix and improve save zoom feature, loading it on start

This seems to work also with problem described in bug #295446

BUG: 277599
BUG: 296447
CCBUG: 295446